--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,41 @@ dist.jar=${dist.dir}/WeatherStation.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=jfreechart-1.0.19/lib/hamcrest-core-1.3.jar
 file.reference.jcommon-1.0.23.jar=jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jdom-2.0.6-contrib.jar=jdom-2.0.6/jdom-2.0.6-contrib.jar
+file.reference.jdom-2.0.6-javadoc.jar=jdom-2.0.6/jdom-2.0.6-javadoc.jar
+file.reference.jdom-2.0.6-junit.jar=jdom-2.0.6/jdom-2.0.6-junit.jar
+file.reference.jdom-2.0.6-sources.jar=jdom-2.0.6/jdom-2.0.6-sources.jar
 file.reference.jdom-2.0.6.jar=jdom-2.0.6/jdom-2.0.6.jar
+file.reference.jfreechart-1.0.19-experimental.jar=jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar
 file.reference.jfreechart-1.0.19.jar=jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=jfreechart-1.0.19/lib/jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=jfreechart-1.0.19/lib/junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=jfreechart-1.0.19/lib/orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=jfreechart-1.0.19/lib/orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=jfreechart-1.0.19/lib/servlet.jar
+file.reference.swtgraphics2d.jar=jfreechart-1.0.19/lib/swtgraphics2d.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.jdom-2.0.6-contrib.jar}:\
+    ${file.reference.jdom-2.0.6-javadoc.jar}:\
+    ${file.reference.jdom-2.0.6-junit.jar}:\
+    ${file.reference.jdom-2.0.6-sources.jar}:\
+    ${file.reference.jdom-2.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,10 +94,7 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${file.reference.jdom-2.0.6.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}
+    ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
